# pico-micro_speech

./: CMakeLists.txt  README.md  audio_provider.cpp  audio_provider.h  command_responder.cpp  command_responder.h  command_responder_test.cpp  feature_provider.cpp  feature_provider.h  main.cpp  main_functions.cpp  micro_features_generator.cpp  micro_features_generator.h  micro_speech_test.cpp  pdm_audio_provider.cpp  recognize_commands.cpp  recognize_commands.h
pico-microphone/: CMakeLists.txt  README.md
